tests/cases/errors/sema/negative_array_size.hc
//@ error: array size cannot be negative
class A { I64 a[-1]; };

A g;

U0 Main() {}
